...

    if (error.response) {
      //  backend respondeu (status HTTP)
      const status = error.response.status

      if (status === 401) {
        toast.error('Email ou senha inválidos')
      } else if (status === 500) {
        toast.error('Erro no servidor. Tente novamente mais tarde.')
      } else {
        toast.error('Erro inesperado')
      }

...
