...
        }}
      />

      <Tabs.Screen
        name="create-unit"
        options={{
          title: "Nova Unidade",
          headerTitle: "Nova Unidade",
          href: isSupportUnit ? undefined : null,
          tabBarIcon: ({ focused }) => (
            <View style={[styles.centerTabButton, focused && styles.centerTabButtonActive]}>
              <Ionicons name="add" size={27} color="#fff" />
            </View>
...
